Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -1512,6 +1512,47 @@
       .section-title {
         font-size: 1.8rem;
       }
+
+      /* Mobile image fixes */
+      .hero-image-main img {
+        height: 250px;
+      }
+
+      .about-img-main img {
+        height: 300px;
+      }
+
+      .about-img-float {
+        width: 150px;
+        height: 150px;
+        bottom: -30px;
+        right: -30px;
+      }
+
+      .special-img-wrapper img {
+        height: 350px;
+      }
+
+      .menu-card-image {
+        height: 180px;
+      }
+
+      .event-card-image {
+        height: 150px;
+      }
+
+      .strength-card {
+        padding: 30px 20px;
+      }
+
+      .menu-card-content,
+      .event-card-content {
+        padding: 20px;
+      }
+
+      .testimonial-card {
+        padding: 25px;
+      }
     }
   </style>
 </head>
